PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/ManyUnexpectedEndWhile.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.


endWhile
endWhile

do While [x] = (1).
endWhile

endWhile
endWhile